gccida/c1/fold_rtx
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3839:4: error: expected ';' after expression
rtx v63; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3839:5: error: use of undeclared identifier 'v63'
rtx v63; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3840:4: error: expected ';' after expression
rtx const_rtx; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3840:5: error: use of undeclared identifier 'const_rtx'
rtx const_rtx; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3854:4: error: expected ';' after expression
rtx v78; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3854:5: error: use of undeclared identifier 'v78'
rtx v78; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3856:4: error: expected ';' after expression
rtx v80; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3856:5: error: use of undeclared identifier 'v80'
rtx v80; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3858:4: error: expected ';' after expression
rtx v82; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3858:5: error: use of undeclared identifier 'v82'
rtx v82; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3860:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v84; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3861:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v85; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3862:4: error: expected ';' after expression
rtx v86; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3862:5: error: use of undeclared identifier 'v86'
rtx v86; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3869:6: error: use of undeclared identifier 'v93'
rtx *v93; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3872:4: error: expected ';' after expression
rtx v96; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3872:5: error: use of undeclared identifier 'v96'
rtx v96; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3874:4: error: expected ';' after expression
rtx v98; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/cse.c:3874:5: error: use of undeclared identifier 'v98'
rtx v98; // r12 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/fold_rtx/src/obj/cse.o] Error 1
